--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-
+    <string name="dangerous_description">危险权限描述</string>
+    <string name="dangerous_label">危险等级标签</string>
+    <string name="normal_description">普通权限描述</string>
+    <string name="normal_label">普通权限标签</string>
 </resources>
